Fixed flickering during upload template

--- a/frontend/src/components/fileUploaderComponent/fileUploadComponent.css
+++ b/frontend/src/components/fileUploaderComponent/fileUploadComponent.css
@@ -9,11 +9,15 @@
 }
 
 .file-uploader--dragging {
-    background-color: gray;
+    width: 100%;
+    height: 100%;
+    border: 1px solid gray;
+    border-radius: 8px;
+    padding: 10px;
+    background-color: lightgrey;
 }
 
 .file-uploader__contents {
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -22,6 +26,12 @@
 
 .file-uploader__file-name {
     font-weight: 700;
+}
+
+.drop-area-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Want to hide default select button because entire modal body is clickable */
